[project]
name = "leet-help"
version = "0.1.0"
description = "LeetCode study workbook generator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["leetcode", "algorithms", "study", "workbook"]

dependencies = [
    "click>=8.1.0",
    "html2text>=2024.2.0",
    "playwright>=1.40.0",
    "pyyaml>=6.0",
    "weasyprint>=60.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "pygments>=2.17.0",
    "pypdf>=4.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[project.scripts]
leet-help = "leet_help.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leet_help"]

[tool.ruff]
line-length = 100
target-version = "py311"
